[gd_scene load_steps=11 format=2]

[ext_resource path="res://challenges/week9/gfx/pull/pull.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week9/scenes/pull/pull.gd" type="Script" id=2]
[ext_resource path="res://challenges/week9/gfx/pull/pull3.webp" type="Texture" id=3]
[ext_resource path="res://challenges/week9/gfx/pull/pull2.webp" type="Texture" id=4]
[ext_resource path="res://challenges/week9/gfx/pull/pull1.webp" type="Texture" id=5]
[ext_resource path="res://common/sfx/pull_machine/pulling_machine.mp3" type="AudioStream" id=6]
[ext_resource path="res://challenges/week3/gfx/map/mouse_pointer.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "pulling",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.0

[sub_resource type="CircleShape2D" id=3]
radius = 2.23607

[node name="pull" type="Node2D"]
position = Vector2( 330, 174 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "pulling"

[node name="pull_sphere" type="Area2D" parent="AnimatedSprite"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/pull_sphere"]
position = Vector2( 10, -93 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PullSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="mouse_pointer" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="mouse_pointer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_pointer/Area2D"]
shape = SubResource( 3 )

[connection signal="input_event" from="AnimatedSprite/pull_sphere" to="." method="_on_Area2D_input_event"]
